configmap-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypodcontainer
    image: busybox
    args:
    - /bin/sh
    - -c
    - sleep 10; touch /tmp/healthy; sleep 30000
    volumeMounts:
    - name: foo
      mountPath: "/etc"
  volumes:
  - name: foo
    configMap:
      name: myconfigmap
      items:
      - key: logging.conf
        path: myapp/logging.conf
